...
                Text(
                    text = workoutName,
                    modifier = Modifier.padding(end = 8.dp).testTag("WorkoutName"),
                    fontSize = 20.sp,
                    color = TitleBlue,
...
                    .verticalScroll(rememberScrollState())
                    .fillMaxHeight()
                    .testTag("WorkoutScreenBodyColumn"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              if (summaryScreenIsDisplayed) {
...
                          fontWeight = FontWeight.Bold,
                          color = TitleBlue,
                          modifier = Modifier.height(50.dp).testTag("ExerciseName"))
                      Divider(
                          color = Line,
...
                          textAlign = TextAlign.Center,
                          modifier =
                              Modifier.width(317.dp).height(79.dp).testTag("ExerciseDescription"))
                    }

...
                        modifier =
                            Modifier.size(width = 350.dp, height = 200.dp)
                                .testTag("VideoPlayer")
                                .composed { key(URL) { this } }) {
                          VideoPlayer(context = LocalContext.current, url = URL)
...
                        modifier =
                            Modifier.size(width = 350.dp, height = 200.dp)
                                .testTag("LoadingIndicator"),
                        contentAlignment = Alignment.Center) {
                          androidx.compose.material3.CircularProgressIndicator(
...
                                    else R.drawable.baseline_access_time_24),
                            contentDescription = "repetition",
                            modifier = Modifier.padding(horizontal = (5).dp).testTag("GoalIcon"),
                            colorFilter = ColorFilter.tint(TitleBlue))
                        Text(
...
                            fontWeight = FontWeight.SemiBold,
                            color = TitleBlue,
                            modifier = Modifier.testTag("GoalValue"))
                      }

...
                                contentDescription = "Goal Counter",
                                modifier =
                                    Modifier.size(350.dp, 200.dp).testTag("ExerciseTypeIcon"))
                          } else {
                            CountDownTimer(
                                timer,
                                timeLimit,
...
                if (presentationButtonBoxIsDisplayed) {

                  SkipButton(
                      onClick = {
                        exerciseStateList[exerciseIndex].isDone = false
...
                              onCheckedChange = { cameraRecordAsked = it },
                              colors = SwitchDefaults.colors(checkedTrackColor = LightBlue2),
                              modifier = Modifier.testTag("recordSwitch"))
                        }
                  }
...
                              .align(Alignment.CenterHorizontally)
                              .background(brush = BlueGradient, shape = LeafShape)
                              .testTag("StartButton"))
                } else if (finishButtonBoxIsDisplayed) {
                  // Finish button box to be displayed during a exercise to be executing
...
                                    .align(Alignment.CenterHorizontally)
                                    .background(brush = BlueGradient, shape = LeafShape)
                                    .testTag("FinishButton"),
                            arrow = false)
                        Spacer(Modifier.size(25.dp))
...
