...
    OutlinedButton(
        contentPadding = PaddingValues(animationStateContentPadding.value.toInt().dp),
        modifier =
            Modifier.align(Alignment.Center)
                .offset(y = animationState.value.toInt().dp) // Use animationState for offset
                .background(Color.Transparent)
                .testTag("CounterPauseResumeButton"),
        shape = CircleShape,
        border = BorderStroke(width = 2.dp, color = Color(0xFF6750A4)),
        onClick = onPauseClicked,
        colors =
            ButtonDefaults.buttonColors(
                containerColor = Color.Transparent, contentColor = Color.White)) {
...
